# agentpay-receipts

./: .vercelignore  AGENTPAY_EXPANDED_PLAN.md  Anchor.toml  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: pages.yml
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  index.css  main.tsx  styles.css  types.ts
app/src/components/: AgentRunPanel.tsx  EmptyState.tsx  MetricCard.tsx  ProviderEvidence.tsx  ReceiptCard.tsx  ReceiptVerifier.tsx  Shell.tsx  StatusPill.tsx  TaskForm.tsx  TaskTable.tsx  Timeline.tsx  WalletBadge.tsx
app/src/data/: providers.ts  seed.ts
app/src/idl/: agentpay_escrow.json
app/src/lib/: anchorClient.ts  demoAgent.ts  hashes.ts  ids.ts  pda.ts  receipts.ts  solana.ts  storage.ts
app/src/pages/: Dashboard.tsx  NewTask.tsx  ReceiptPage.tsx  SubmitPage.tsx  TaskDetail.tsx  VerifyPage.tsx
programs/agentpay_escrow/: Cargo.toml
programs/agentpay_escrow/src/: lib.rs
tests/: agentpay_escrow.ts
