[package]
name = "agentpay_escrow"
version = "0.1.0"
description = "SOL escrow receipts for paid AI agent work"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentpay_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
